ajeitando as imagens

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             </ul>
         </nav>
 
+<div class="container2">
         <video id="my-video" class="video-js" controls preload="auto" width="640" height="264"
             poster="MY_VIDEO_POSTER.jpg" data-setup="{}">
             <source src="file.mp4" type="video/mp4" />
@@ -71,8 +72,8 @@
         </form>
 
         <div class="yt">
-            <iframe width="980" src="https://www.youtube.com/embed/IU_gsbLqLpA" title="YouTube video player"
-                frameborder="0"
+            <iframe width="600" height="460" src="https://www.youtube.com/embed/IU_gsbLqLpA"
+                title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
         </div>
@@ -105,7 +106,23 @@
             <div class="left">
                 <h1>MODELOS DAS MAQUINAS</h1>
                 <br>
-                <h2>Netbooks</h2>
+                <h2>Notebooks</h2>
+
+                <p>Laptop, no Brasil, também denominado de notebook ou a expressão pouco usada computador compacto e
+                    em
+                    Portugal
+                    chamado de computador portátil é um computador portátil, leve, projetado para ser transportado e
+                    utilizado em
+                    diferentes lugares com facilidade.. </p>
+            </div>
+            <div class="right">
+                <img class="img1" src="IMG/img1.jpeg">
+            </div>
+
+            <div class="left">
+                <br>
+                <h2>Gabinetes</h2>
+                <br>
                 <p>Laptop, no Brasil, também denominado de notebook ou a expressão pouco usada computador compacto e em
                     Portugal
                     chamado de computador portátil é um computador portátil, leve, projetado para ser transportado e
@@ -113,25 +130,13 @@
                     diferentes lugares com facilidade.. </p>
             </div>
             <div class="right">
-                <img src="IMG/img1.jpeg">
+                <img class="img2" src="IMG/img2.jpeg">
             </div>
 
             <div class="left">
                 <br>
-                <h2>Netbooks</h2>
-                <p>Laptop, no Brasil, também denominado de notebook ou a expressão pouco usada computador compacto e em
-                    Portugal
-                    chamado de computador portátil é um computador portátil, leve, projetado para ser transportado e
-                    utilizado em
-                    diferentes lugares com facilidade.. </p>
-            </div>
-            <div class="right">
-                <img src="IMG/img2.jpeg">
-            </div>
-
-            <div class="left">
+                <h2>Setup completo</h2>
                 <br>
-                <h2>Netbooks</h2>
                 <p>Netbooks são uma categoria menor, mais leve e mais barata de laptops. Quando surgiram, ao final de
                     2007,[1] os
                     netbooks se apresentavam como versões menores, mais leves, baratas e otimizadas de notebooks.[2] Os
@@ -141,12 +146,13 @@
                     evolução, apresentaram variação de tamanho (diagonal de tela) entre 5 e 12 polegadas. </p>
             </div>
             <div class="right">
-                <img src="IMG/img3.jpeg">
+                <img class="img3" src="IMG/img3.jpeg">
             </div>
 
             <div class="left">
                 <br>
                 <h2>PC GAMER</h2>
+                <br>
                 <p>Laptop, no Brasil, também denominado de notebook ou a expressão pouco usada computador compacto e em
                     Portugal
                     chamado de computador portátil é um computador portátil, leve, projetado para ser transportado e
@@ -154,7 +160,7 @@
                     diferentes lugares com facilidade.. </p>
             </div>
             <div class="right">
-                <img src="IMG/img4.jpeg">
+                <img class="img4" src="IMG/img4.jpeg">
             </div>
         </section>
 
@@ -176,7 +182,7 @@
 
     <script src="jlplayer.js" async></script>
     <script src="https://vjs.zencdn.net/7.11.4/video.min.js"></script>
-
+</div>
 </body>
 
 </html>
